fix(UI): Fixing walletconnect “copy” not-visible when dark mode is on
Closes ZKF-865

--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -338,7 +338,10 @@ aside.bn-onboard-custom.bn-onboard-modal {
 }
 
 body.-dark {
-  .walletconnect-modal__mobile__toggle a {
-    color: #1d2039 !important;
+  .walletconnect-modal__mobile__toggle,
+  .walletconnect-modal__footer {
+    a {
+      color: #1d2039 !important;
+    }
   }
 }
